# Plonky3

./: .gitignore  Cargo.toml  MIDEN_INTEGRATION_GUIDE.md  README.md  bench.txt
air/src/: air.rs
air/src/symbolic/: variable.rs
batch-stark/src/: prover.rs  verifier.rs
batch-stark/tests/: simple.rs  simple.rs.bak
blake3-air/src/: air.rs
circle/: Cargo.toml
circle/src/: folding.rs  pcs.rs  periodic.rs  prover.rs  verifier.rs
commit/: Cargo.toml
commit/src/: mmcs.rs  pcs.rs  testing.rs
examples/: Cargo.toml
examples/examples/: PERMUTATION_AIR_README.md  PROOF_GENERATION_GUIDE.md  permutation_air.rs  permutation_air_prove.rs  permutation_proof_complete.rs
examples/src/: airs.rs  proofs.rs
field-testing/src/: extension_testing.rs
field/src/: field.rs
field/src/extension/: binomial_extension.rs  packed_binomial_extension.rs
field/src/packed/: packed_traits.rs
fri/: Cargo.toml
fri/benches/: fold_even_odd.rs
fri/src/: config.rs  hiding_pcs.rs  lib.rs  periodic.rs  prover.rs  single_matrix_pcs.rs  single_mcs.rs  two_adic_pcs.rs  verifier.rs
fri/tests/: fri.rs  pcs.rs  single_matrix_pcs.rs
goldilocks/: Cargo.toml
goldilocks-monty/benches/: bench_field.rs
goldilocks-monty/src/: goldilocks.rs  tests.rs
goldilocks-wasm-benchmark/src/: lib.rs  main.rs
goldilocks/src/: extension.rs  goldilocks.rs
interpolation/src/: lib.rs
keccak/: Cargo.toml
keccak-air/examples/: prove_baby_bear_sha256.rs  prove_baby_bear_sha256_compress.rs  prove_goldilocks_keccak.rs  prove_goldilocks_poseidon2.rs  prove_goldilocks_sha256.rs  prove_m31_sha256.rs
keccak-air/src/: air.rs
keccak/tests/: chained_stateful.rs
lifted/: Cargo.toml  bench.sh  docs.md  plan.md  readme.md
lifted/benches/: bench_utils.rs  deep_quotient.rs  fri_fold.rs  fri_fold_row.rs  lifted.rs  lmcs_hashes.rs  lmcs_vs_mmcs.rs  merkle_commit.rs  pcs.rs
lifted/merkle_tree/: hiding_lmcs.rs  merkle_tree.rs  mod.rs  test_helpers.rs
lifted/src/: lib.rs  tests.rs  utils.rs
lifted/src/deep/: interpolate.rs  mod.rs  prover.rs  tests.rs  verifier.rs
lifted/src/fri/: commit.rs  config.rs  deep.rs  fold.rs  fold4.rs  mod.rs  proof.rs  prover.rs  verifier.rs
lifted/src/merkle_tree/: hiding_lmcs.rs  lifted_tree.rs  mod.rs  test_helpers.rs
lifted/src/pcs/: config.rs  mod.rs  proof.rs  tests.rs
lookup/src/: folder.rs  lookup_traits.rs  tests.rs
matrix/benches/: columnwise_dot_product.rs
matrix/src/: horizontally_truncated.rs  lib.rs  lifted.rs
merkle-tree/: Cargo.toml
merkle-tree/benches/: lifted.rs  lmcs_hashes.rs  lmcs_vs_mmcs.rs  merkle_tree.rs
merkle-tree/src/: lib.rs  lmcs.rs  merkle_tree.rs  mmcs.rs  uniform.rs
merkle-tree/src/lmcs/: dimensions.rs  merkle_tree.rs  mod.rs  test_helpers.rs  utils.rs
miden-air/: Cargo.toml
miden-air/src/: air.rs  builder.rs  filtered_builder.rs  lib.rs
miden-prover/: Cargo.toml
miden-prover/examples/: fibonacci.rs
miden-prover/src/: air_wrapper_bus_boundary.rs  check_constraints.rs  config.rs  folder.rs  lib.rs  logup.rs  periodic_tables.rs  prover.rs  symbolic_builder.rs  util.rs  verifier.rs
miden-prover/tests/: fibonacci_air.rs  fibonacci_periodic_air.rs  periodic_air.rs  perm_air.rs
monty-64/src/: monty_64.rs
p3-miden-air/: Cargo.toml
p3-miden-fri/: Cargo.toml
p3-miden-goldilocks/: Cargo.toml
p3-miden-goldilocks/src/: goldilocks.rs
p3-miden-prover/: Cargo.toml
p3-miden-prover/src/: check_constraints.rs  symbolic_builder.rs
p3-miden-prover/tests/: fibonacci_air.rs  periodic_air.rs  perm_air.rs
p3-miden-uni-stark/: Cargo.toml
poseidon2-air/examples/: prove_poseidon2_baby_bear_keccak_zk.rs  prove_poseidon2_koala_bear_keccak.rs
poseidon2-air/src/: air.rs  vectorized.rs
symmetric/: Cargo.toml
symmetric/src/: chaining_hasher.rs  lib.rs  sponge.rs  stateful.rs
uni-stark/: Cargo.toml  PERM.md
uni-stark/src/: check_constraints.rs  config.rs  folder.rs  lib.rs  logup.rs  proof.rs  prover.rs  symbolic_builder.rs  symbolic_expression.rs  symbolic_variable.rs  util.rs  utils.rs  verifier.rs
uni-stark/tests/: fib_air.rs  fib_air_single_matrix_pcs.rs  mul_air.rs  mul_fib_pair.rs  perm_air.rs  rescue_hash.rs
