[package]
name = "p3-lifted"
description = "Lifted Matrix Commitment Scheme (LMCS) implementation for Plonky3."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
p3-challenger.workspace = true
p3-commit.workspace = true
p3-dft.workspace = true
p3-field.workspace = true
p3-matrix.workspace = true
p3-maybe-rayon.workspace = true
p3-symmetric.workspace = true
p3-util.workspace = true

rand.workspace = true
serde = { workspace = true, features = ["alloc"] }
thiserror.workspace = true

[dev-dependencies]
p3-baby-bear.workspace = true
p3-blake3.workspace = true
p3-fri.workspace = true
p3-goldilocks.workspace = true
p3-interpolation.workspace = true
p3-keccak.workspace = true
p3-merkle-tree.workspace = true

criterion.workspace = true
rand.workspace = true

[features]
default = ["bench-goldilocks", "bench-poseidon2"]
parallel = ["p3-maybe-rayon/parallel"]

# Benchmark field selection (mutually exclusive)
bench-babybear = []
bench-goldilocks = []

# Benchmark hash selection (mutually exclusive)
bench-blake3 = []
bench-keccak = []
bench-poseidon2 = []

[[bench]]
name = "fri_fold"
harness = false

[[bench]]
name = "deep_quotient"
harness = false

[[bench]]
name = "merkle_commit"
harness = false

[[bench]]
name = "lmcs_vs_mmcs"
harness = false

[[bench]]
name = "pcs"
harness = false

[lints]
workspace = true
